# rust_template

./: CHANGELOG.md  Cargo.toml  Makefile.toml  deny.toml  readme.md  typos.toml
.github/workflows/: release.yml
