[package]
name = "rust_template"
version = "0.1.1"
edition = "2021"
license = "MIT"

[dependencies]



# 配置 git-cliff 的 Changelog 生成器
[package.metadata.git-cliff.changelog]
# 定义 Changelog 文件的头部内容
header = """
# 更新日志\n
所有显著的变化将记录在此文件中。请参阅 [常规提交](https://www.conventionalcommits.org/) 规范以了解提交指南。\n
"""
# 定义 Changelog 正文的模板，使用 Tera 模板语言
body = """
---
{% if version %}\
    {% if previous.version %}\
        ## [{{ version | trim_start_matches(pat="v") }}]($REPO/compare/{{ previous.version }}..{{ version }}) - {{ timestamp | date(format="%Y-%m-%d") }}
    {% else %}\
        ## [{{ version | trim_start_matches(pat="v") }}] - {{ timestamp | date(format="%Y-%m-%d") }}
    {% endif %}\
{% else %}\
    ## [未发布]
{% endif %}\
{% for group, commits in commits | group_by(attribute="group") %}
    ### {{ group | striptags | trim | upper_first }}
    {% for commit in commits
    | filter(attribute="scope")
    | sort(attribute="scope") %}
        - **({{commit.scope}})**{% if commit.breaking %} [**破坏性更改**]{% endif %} \
            {{ commit.message|trim }} - ([{{ commit.id | truncate(length=7, end="") }}]($REPO/commit/{{ commit.id }})) - {{ commit.author.name }}
    {%- endfor -%}
    {% raw %}\n{% endraw %}\
    {%- for commit in commits %}
        {%- if commit.scope -%}
        {% else -%}
            - {% if commit.breaking %} [**破坏性更改**]{% endif %}\
                {{ commit.message|trim }} - ([{{ commit.id | truncate(length=7, end="") }}]($REPO/commit/{{ commit.id }})) - {{ commit.author.name }}
        {% endif -%}
    {% endfor -%}
{% endfor %}\n
"""
# 定义 Changelog 文件的尾部内容
footer = """
<!-- 由 git-cliff 生成 -->
"""
# 移除模板字符串首尾的空白字符
trim = true
# 定义 postprocessors，用于替换模板中的变量或模式
postprocessors = [
    # 替换 $REPO 为实际的仓库地址
    { pattern = '\$REPO', replace = "" }, # 替换仓库 URL
]

[package.metadata.git-cliff.git]
# 是否解析遵循 conventional commits 规范的提交
conventional_commits = true
# 是否过滤掉非 conventional commits 规范的提交
filter_unconventional = false
# 是否将每个提交的每个正文行作为单独的提交处理
split_commits = false
# 提交消息的预处理正则表达式列表
commit_preprocessors = [
    # 替换 Issue 编号为链接形式
    # { pattern = '\((\w+\s)?#([0-9]+)\)', replace = "([#${2}](https://github.com/orhun/git-cliff/issues/${2}))" },
]
# 解析和分组提交的正则表达式列表
commit_parsers = [
    # 跳过
    { message = "\\[skip", skip = true },
    # 包含任何中文跳过
    # { message = "\\p{Han}", skip = true },
    # feat 开头放入特性分类
    { message = "^feat", group = "feat" },
    # fix 开头放入 bug 修复分类
    { message = "^fix", group = "fix bug" },
    # doc 开头放入文档分类
    { message = "^doc", group = "document" },
    # perf 开头放入性能分类
    { message = "^perf", group = "perf" },
    # refactor 放入重构分类
    { message = "^refactor", group = "refactor" },
    # style 开头放入样式分类
    { message = "^style", group = "style" },
    # revert 放入还原复原分类
    { message = "^revert", group = "revert" },
    # test 放入测试分类
    { message = "^test", group = "tests" },
    # 以 chore: 开头，跳过这条提交
    { message = "^chore:", skip = true },
    # 包含 security 安全修复
    { body = ".*security", group = "security" },
    # 不匹配的其他内容归入 Other 
    { message = ".*", group = "others" },
]
# 是否保护破坏性更改不被跳过
protect_breaking_commits = false
# 是否过滤掉不符合 commit parsers 的提交
filter_commits = false
# 匹配 git 标签的正则表达式
tag_pattern = "v[0-9].*"
# 跳过匹配的标签
skip_tags = "v0.1.0-beta.1"
# 忽略匹配的标签
ignore_tags = ""
# 是否按照拓扑排序排序标签
topo_order = false
# 小节内提交的排序方式，"oldest" 或 "newest"
sort_commits = "oldest"
# 限制在 Changelog 中包含的提交数量
# limit_commits = 42